[package]
name = "rustpad"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.27"
rfd = "0.14"
arboard = "3"
image = { version = "0.24", default-features = false, features = ["ico"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 2
